# ravest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.md  logprob_corrections.md  make.bat  requirements.txt
docs/Examples/: K2-24.ipynb  example_fitting.ipynb  example_harmonic.ipynb  example_model.ipynb
docs/Examples/example_data/: 51Pegb.txt  K2-229.csv  K2-24.csv  TOI-270.csv  TOI-544.csv  TOI270.txt
src/ravest/: __init__.py  basis.py  fit.py  gp.py  model.py  param.py  prior.py
tests/: test_fit.py  test_gp.py  test_logprob_corrections.py  test_logprob_corrections_gp.py  test_model.py  test_param.py  test_parameterisation_flexibility.py  test_prior.py
tests/data/: beta_reference.json  rv1.txt  rv2.txt
