[project]
name = "ravest"
version = "0.2.2"
description = "Radial Velocity fitting, simulation and model comparison"
authors = [
    {name = "Ross Dobson",email = "56548895+ross-dobson@users.noreply.github.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "astropy (>=7.1.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "corner (>=2.2.3,<3.0.0)",
    "emcee (>=3.1.6,<4.0.0)"
]
[project.urls]
homepage = "https://ravest.readthedocs.io"
repository = "https://www.github.com/ross-dobson/ravest"


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
myst-nb = "^1.2.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
