[project]
name = "ravest"
version = "0.2.5"
description = "Radial Velocity fitting, simulation and model comparison"
authors = [
    {name = "Ross Dobson",email = "56548895+ross-dobson@users.noreply.github.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "numpy (>=2)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "corner (>=2.2.3,<3.0.0)",
    "emcee (>=3.1.6,<4.0.0)",
    "jax (>=0.8.2,<0.9.0)",
    "harmonic (>=1.3.1,<2.0.0)",
    "tinygp (>=0.3.0,<0.4.0)",
    "pandas (>=2.3.3,<3.0.0)"
]
[project.urls]
homepage = "https://ravest.readthedocs.io"
repository = "https://www.github.com/ross-dobson/ravest"


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
myst-nb = "^1.2.0"
sphinx = "^8.2.3"
ipykernel = "^6.29.5"
nbstripout = "^0.8.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "D", "ANN"]  # E = pycodestyle, F = pyflakes, I = isort, D = pydocstyle, ANN = flake8-annotations
lint.ignore = ["E501", "E266", "D401", "D105"]
fix = true
unsafe-fixes = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "ANN"]  # Ignore docstrings and all type annotations in tests
"docs/*" = ["D100", "ANN"]  # Ignore docstrings and type annotations in docs (because conf.py isn't a real python package file)

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
